@@ -60,21 +60,32 @@ int mqtt3_handle_connack(mosquitto_db *db, struct mosquitto *context)
 		case 0:
 			if(context->bridge){
 				if(context->bridge->notifications){
-					notification_topic_len = strlen(context->id)+strlen("$SYS/broker/connection//state");
-					notification_topic = _mosquitto_malloc(sizeof(char)*(notification_topic_len+1));
-					if(!notification_topic) return MOSQ_ERR_NOMEM;
-
-					snprintf(notification_topic, notification_topic_len+1, "$SYS/broker/connection/%s/state", context->id);
 					notification_payload[0] = '1';
 					notification_payload[1] = '\0';
-					if(_mosquitto_send_real_publish(context, _mosquitto_mid_generate(context),
-							notification_topic, 2, (uint8_t *)&notification_payload, 1, true, 0)){
+					if(context->bridge->notification_topic){
+						if(_mosquitto_send_real_publish(context, _mosquitto_mid_generate(context),
+								context->bridge->notification_topic, 2, (uint8_t *)&notification_payload, 1, true, 0)){
 
+							return 1;
+						}
+						mqtt3_db_messages_easy_queue(db, context, context->bridge->notification_topic, 1, 2, (uint8_t *)&notification_payload, 1);
+					}else{
+						notification_topic_len = strlen(context->id)+strlen("$SYS/broker/connection//state");
+						notification_topic = _mosquitto_malloc(sizeof(char)*(notification_topic_len+1));
+						if(!notification_topic) return MOSQ_ERR_NOMEM;
+
+						snprintf(notification_topic, notification_topic_len+1, "$SYS/broker/connection/%s/state", context->id);
+						notification_payload[0] = '1';
+						notification_payload[1] = '\0';
+						if(_mosquitto_send_real_publish(context, _mosquitto_mid_generate(context),
+								notification_topic, 2, (uint8_t *)&notification_payload, 1, true, 0)){
+
+							_mosquitto_free(notification_topic);
+							return 1;
+						}
+						mqtt3_db_messages_easy_queue(db, context, notification_topic, 1, 2, (uint8_t *)&notification_payload, 1);
 						_mosquitto_free(notification_topic);
-						return 1;
 					}
-					mqtt3_db_messages_easy_queue(db, context, notification_topic, 1, 2, (uint8_t *)&notification_payload, 1);
-					_mosquitto_free(notification_topic);
 				}
 				for(i=0; i<context->bridge->topic_count; i++){
 					if(context->bridge->topics[i].direction == bd_in || context->bridge->topics[i].direction == bd_both){
